<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFuelEntryActivity"
    android:fitsSystemWindows="true">>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- Main content with Toolbar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:navigationIcon="@drawable/ic_close" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="outline"
                android:layout_marginTop="8dp">

                <AutoCompleteTextView
                    android:id="@+id/toolbarDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/car_selector_height"
                    android:focusable="false"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="Selected Car"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="@dimen/label_width_afe"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="Odometer"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/odometerInputEditText"
                    app:layout_constraintStart_toStartOf="@+id/odometerInputEditText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/odometerInputEditText"
                    style="@style/Widget.Material3.TextInputEditText.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:hint="Miles"
                    android:inputType="number"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="@dimen/label_width_afe"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="Gas"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/gasVolumeInputEditText"
                    app:layout_constraintStart_toStartOf="@+id/gasVolumeInputEditText"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/gasVolumeInputEditText"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:hint="Gallons"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/odometerInputEditText" />

                <TextView
                    android:layout_width="@dimen/label_width_afe"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="Price/Gal"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/pricePerGallonInputEditText"
                    app:layout_constraintStart_toStartOf="@+id/pricePerGallonInputEditText"
                    app:layout_constraintVertical_bias="0.0" />


                <EditText
                    android:id="@+id/pricePerGallonInputEditText"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:hint="Dollars"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gasVolumeInputEditText" />

                <TextView
                    android:layout_width="@dimen/label_width_afe"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="Total Price"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/totalPriceInputEditText"
                    app:layout_constraintStart_toStartOf="@+id/totalPriceInputEditText"
                    app:layout_constraintVertical_bias="0.0" />


                <EditText
                    android:id="@+id/totalPriceInputEditText"
                    style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:hint="Dollars"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/input_padding_afe"
                    android:textSize="@dimen/input_text_size_afe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pricePerGallonInputEditText" />

                <TextView
                    android:layout_width="@dimen/label_width_afe"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="Date"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/dateInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/dateInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/date_width_afe"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    app:boxBackgroundMode="outline"
                    app:layout_constraintStart_toStartOf="@+id/totalPriceInputEditText"
                    app:layout_constraintTop_toBottomOf="@+id/totalPriceInputEditText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDateFuelEntry"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height_afe"
                        android:clickable="true"
                        android:focusable="false"
                        android:gravity="center"
                        android:inputType="none"
                        android:padding="@dimen/datetime_padding" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="@dimen/label_width_afe"
                    android:layout_height="@dimen/label_height_afe"
                    android:layout_marginStart="@dimen/label_margin_start_afe"
                    android:layout_marginBottom="@dimen/label_margin_bottom_afe"
                    android:text="Time"
                    android:textSize="@dimen/label_text_size_afe"
                    app:layout_constraintBottom_toTopOf="@+id/timeInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/timeInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/time_width_afe"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    app:boxBackgroundMode="outline"
                    app:layout_constraintEnd_toEndOf="@+id/totalPriceInputEditText"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/totalPriceInputEditText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTimeFuelEntry"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height_afe"
                        android:clickable="true"
                        android:focusable="false"
                        android:gravity="center"
                        android:inputType="none"
                        android:padding="@dimen/datetime_padding" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveEntryButton"
                    android:layout_width="@dimen/input_width_afe"
                    android:layout_height="@dimen/input_height_afe"
                    android:layout_marginTop="@dimen/margin_top_large_afe"
                    android:text="Save"
                    app:cornerRadius="8dp"
                    app:backgroundTint="?attr/colorPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeInputLayout" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/menu_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>